# mHM

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  mhm-new.nml  mhm-output-template.nml  mhm-para-template.nml  mhm-template.nml  mhm.nml  mhm_parameter.nml  mpr_minimal.nml  mpr_neutrons_desilets_minimal.nml  mpr_pet_hargreaves_minimal.nml  mpr_runoff_baseflow_minimal.nml  mpr_soil_moisture_minimal.nml  mpr_temporal_lc_soil_moisture_minimal.nml  mrm.nml  mrm_minimal.nml  mrm_minimal1.nml  mrm_minimal2.nml  nml-config.toml  pyproject.toml  version.txt  version_forces.txt
CI-scripts/: compile  compile_MPI  compile_MPI_debug  compile_OpenMP  compile_OpenMP_debug  compile_debug  install-deps  run_v6_namelists.sh
app/: CMakeLists.txt  driver.F90  driver.f90  mrm-driver.f90  test_mrm_restart.f90
check/: run_mhm_checks.py
cmake/: .gitrepo  CodeCoverage.cmake
doc/: INSTALL.md  INSTALL_Cygwin.md  doxygen.config
doc/nml/: config_input.md  (+36 more)
forces/: CMakeLists.txt
hpc-module-loads/: .gitrepo
nml-schemas/: config_coupling.yml  config_input.yml  config_mhm.yml  config_mpr.yml  config_mrm.yml  config_processes.yml  output_mrm.yml  parameter_pet0.yml  parameter_petminus1.yml
pybind/: README.md
pybind/src/: .f2py_f2cmap  CMakeLists.txt  wrapper.f90
pybind/src/mhm/: __init__.py  cli.py
src/: CMakeLists.txt
src/MPR/: mo_mpr_global_variables.f90  mo_mpr_read_config.f90  mo_mpr_restart.f90  mo_mpr_runoff.f90  mo_mpr_smhorizons.f90  mo_mpr_soilmoist.f90  mo_mpr_startup.f90  mo_multi_param_reg.f90  mo_read_lut.f90  mo_read_wrapper.f90  mo_soil_database.f90  mo_upscaling_operators.f90
src/common/: mo_common_constants.f90  mo_common_grid.f90  mo_common_mHM_mRM_read_config.f90  mo_common_mHM_mRM_variables.f90  mo_common_read_config.F90  mo_common_read_data.f90  mo_common_restart.f90  mo_common_types.F90  mo_common_variables.F90  mo_namelists.f90  mo_nc_output.f90  mo_optimization_types.f90  mo_optimization_utils.f90  mo_read_spatial_data.f90
src/common_mHM_mRM/: mo_common_mHM_mRM_read_config.f90
src/exchange/: mo_domain.F90  mo_domain.f90  mo_exchange.f90  mo_exchange_type.F90  mo_exchange_type.f90  mo_geology_classdefinition.F90  mo_input_container.F90  mo_input_container.f90  mo_main_config.F90  mo_main_config.f90  mo_meteo_container.F90  mo_meteo_container.f90  mo_mhm_container.F90  mo_mhm_container.f90  mo_mpr_container.F90  mo_mpr_container.f90  mo_mpr_legacy_bridge.F90  mo_mrm_container.F90  mo_mrm_container.f90
src/mHM/: mo_canopy_interc.f90  mo_global_variables.f90  mo_mhm.f90  mo_mhm_interface.F90  mo_mhm_interface_run.f90  mo_mhm_read_config.f90  mo_neutrons.f90  mo_objective_function.F90  mo_restart.f90  mo_runoff.f90  mo_snow_accum_melt.f90  mo_soil_moisture.f90  mo_write_ascii.f90  mo_write_fluxes_states.f90
src/mRM/: mo_mrm_init.f90  mo_mrm_net_startup.f90  mo_mrm_pre_routing.f90  mo_mrm_read_config.f90  mo_mrm_read_data.f90  mo_mrm_restart.f90  mo_mrm_riv_temp_class.f90  mo_mrm_river_head.f90  mo_mrm_routing.f90  mo_mrm_write.f90  mo_mrm_write_fluxes_states.f90  mo_river.f90  mo_river_output.f90  mo_river_router.f90  mo_river_tools.f90  mo_river_upscaler.f90
src/meteo/: mo_meteo_handler.f90  mo_meteo_helper.f90  mo_meteo_spatial_tools.f90
src/nml/: nml_config_coupling.f90  nml_config_input.f90  nml_config_meteo.f90  nml_config_mhm.f90  nml_config_mpr.f90  nml_config_mrm.f90  nml_config_observations.f90  nml_config_optimize.f90  nml_config_processes.f90  nml_config_project.f90  nml_config_time.f90  nml_helper.f90  nml_output_mhm.f90  nml_output_mrm.f90  nml_parameter_directrunoff1.f90  nml_parameter_geoparameter.f90  nml_parameter_interception1.f90  nml_parameter_interflow1.f90  nml_parameter_neutrons1.f90  nml_parameter_neutrons2.f90  nml_parameter_percolation1.f90  nml_parameter_pet0.f90  nml_parameter_pet1.f90  nml_parameter_pet2.f90  nml_parameter_pet3.f90  nml_parameter_petm1.f90  nml_parameter_petm2.f90  nml_parameter_petminus1.f90  nml_parameter_rivertemp1.f90  nml_parameter_routing1.f90  nml_parameter_routing2.f90  nml_parameter_routing3.f90  nml_parameter_snow1.f90  nml_parameter_soilmoisture1.f90  nml_parameter_soilmoisture2.f90  nml_parameter_soilmoisture3.f90  nml_parameter_soilmoisture4.f90
src/tests/: CMakeLists.txt  test_domain.pf  test_exchange.pf  test_exchange_variable.pf  test_meteo_spatial_tools.pf  test_soil_moisture.pf
src/tests/files/: fdir_simple.asc  lc_periods.nc  lc_static.nc  pet_6h.nc  pet_daily_aligned.nc  pet_weights.nc  pre_6h.nc  pre_daily_aligned.nc  pre_weights.nc  scc_gauges_xy.txt  tavg_6h.nc  tavg_daily_aligned.nc  tavg_weights.nc  tmax_6h.nc  tmin_6h.nc
test_nml/: README.md  mhm_interception_snow_passthrough_minimal.nml  mhm_output_minimal.nml  mhm_output_v6_smoke.nml  mhm_parameter_v6_hydrology.nml  mhm_parameter_v6_meteo.nml  mhm_routing_missing_runoff_total_fail.nml  mhm_runoff_baseflow_restart_grid_mismatch_fail.nml  mhm_runoff_baseflow_restart_read.nml  mhm_runoff_baseflow_restart_read_states_only.nml  mhm_runoff_baseflow_restart_write.nml  mpr_gridded_lai_monthly_mean_minimal.nml  mpr_gridded_lai_monthly_mean_restart_read.nml  mpr_gridded_lai_monthly_series_minimal.nml  mpr_gridded_lai_monthly_series_restart_read.nml  mpr_gridded_lai_yearly_series_minimal.nml  mpr_minimal.nml  mpr_neutrons_cosmic_minimal.nml  mpr_neutrons_cosmic_restart_read.nml  mpr_neutrons_desilets_minimal.nml  mpr_pet_aspect_hourly6h_minimal.nml  mpr_pet_aspect_minimal.nml  mpr_pet_aspect_nomask_legacy_grid_invalid.nml  mpr_pet_aspect_restart_read.nml  mpr_pet_aspect_weights_minimal.nml  mpr_pet_hargreaves_hourly_invalid.nml  mpr_pet_hargreaves_minimal.nml  mpr_pet_hargreaves_restart_read.nml  mpr_pet_missing_raw_input_fail.nml  mpr_pet_penman_minimal.nml  mpr_pet_penman_restart_read.nml  mpr_pet_priestley_taylor_minimal.nml  mpr_pet_priestley_taylor_restart_read.nml  mpr_runoff_baseflow_minimal.nml  mpr_runoff_baseflow_restart_read.nml  mpr_runoff_baseflow_snow_off_missing_preeff_fail.nml  mpr_snow_interception_off_missing_throughfall_fail.nml  mpr_snow_pet_lai_minimal.nml  mpr_snow_pet_lai_restart_read.nml  mpr_soil_moisture_minimal.nml  (+16 more)
(+7 files in other folders)
